feat(Container): Webex Teams Host configurations

--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
+    "webpack": "^4.36.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@momentum-ui/core": "^16.2.0",
+    "@momentum-ui/icons": "^6.12.0",
     "adaptivecards-designer": "^0.7.1",
     "markdown-it": "^9.0.1",
     "monaco-editor": "^0.15.6"
